--- a/html/myCenter/userSet.html
+++ b/html/myCenter/userSet.html
@@ -45,7 +45,7 @@
 				text-align: center;
 			}
 			.mui-slider .mui-slider-group .mui-slider-item img{
-				width: auto;
+				width: 80%;
 				-webkit-user-select: none;
 				background-position: 0px 0px, 10px 10px;
 				background-size: 20px 20px;
