--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 			.mui-bar-tab .mui-tab-label{
 				font-size: 11px;
 			}
+			.search-input .mui-input-clear[disabled=disabled]{
+				background-color: #ffffff !important;
+				opacity: 1;
+			}
 		</style>
 	</head>
 	<body>
@@ -96,7 +100,7 @@
 			</a>
 			<div id="search_title" class="search-input">
 				<div class="mui-input-row mui-search">
-				    <input type="search" class="mui-input-clear" placeholder="请输入关键字">
+				    <input type="search" id="search_input" class="mui-input-clear" placeholder="请输入关键字" />
 				</div>
 			</div>
 		</header>
@@ -158,7 +162,6 @@
 					}
 					self.append(sub);
 				}
-				
 				//当前激活选项
 				var activeTab = subpages[0];
 				var title = document.getElementById("title");
