搜索页面   有bug待调整

--- a/html/public/keyboard.html
+++ b/html/public/keyboard.html
@@ -4,6 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style>
+		</style>
 	</head>
 
 	<body>
@@ -11,8 +13,6 @@
 		<script src="../../js/mui-keyboard.js"></script>
 		<script>
 			mui.init()
-			
-			
 			mui.plusReady(function(){
 				// 获取所有可视的Webview窗口
 				var wvs=plus.webview.getDisplayWebview();
